# 12/5/2024

- Updated README with documentation
- Added CHANGELOG
- Finalized setup portion of setup_kafka playbook
- Added Kafka deployment to `setup_kafka` playbook 

# 12/4/2024

- Added Ansible support
- Fixed a bug where the broker containers reported they were wrongfully unhealthy