@@ -2,6 +2,7 @@ volumes:
   controller-1-volume:
   controller-2-volume:
   controller-3-volume:
+  controller-4-volume:
   broker-1-volume:
   broker-2-volume:
   broker-3-volume:
@@ -85,13 +86,41 @@ services:
     volumes:
       - controller-3-volume:/var/lib/kafka/data
 
+  controller-4:
+    image: apache/kafka:latest
+    container_name: controller-3
+    environment:
+      KAFKA_NODE_ID: 4
+      KAFKA_PROCESS_ROLES: controller
+      KAFKA_LISTENERS: CONTROLLER://:9093
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
+
+      # Mount location
+      KAFKA_LOG_DIRS: '/var/lib/kafka/data'
+
+      # Consumer policies
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+    healthcheck:
+      test: ["CMD", "./opt/kafka/bin/kafka-configs.sh", "--bootstrap-server", "localhost:9093", "--version"]
+      interval: 60s
+      retries: 3
+      start_period: 40s
+      timeout: 30s
+    restart: on-failure:3
+    volumes:
+      - controller-4-volume:/var/lib/kafka/data
+
   broker-1:
     image: apache/kafka:latest
     container_name: broker-1
     ports:
       - 29092:9092
     environment:
-      KAFKA_NODE_ID: 4
+
+      # Base configurations
+      KAFKA_NODE_ID: 5
       KAFKA_PROCESS_ROLES: broker
       KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
       KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-1:19092,PLAINTEXT_HOST://{IP_ADDR}:29092'
@@ -111,12 +140,20 @@ services:
       KAFKA_LOG_RETENTION_BYTES: 1073741824  # 1 GB
       KAFKA_LOG_SEGMENT_BYTES: 524288000  # 500 MB
       KAFKA_LOG_CLEANUP_POLICY_DELETE_RETENTION_MS: 3600000  # 1 hour
+
+      # Fault tolerance & High availability
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_MIN_INSYNC_REPLICAS: 2
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+
+    # The healthcheck will try and list all topics available. This will actively check the connection between it and all the other nodes.
     healthcheck:
       test: ["CMD", "./opt/kafka/bin/kafka-topics.sh", "--bootstrap-server", "localhost:19092", "--list"]
       interval: 60s
       retries: 3
       start_period: 40s
       timeout: 30s
+
     restart: on-failure:3
     depends_on:
       - controller-1
@@ -131,7 +168,9 @@ services:
     ports:
       - 39092:9092
     environment:
-      KAFKA_NODE_ID: 5
+
+      # Base configurations
+      KAFKA_NODE_ID: 6
       KAFKA_PROCESS_ROLES: broker
       KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
       KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-2:19092,PLAINTEXT_HOST://{IP_ADDR}:39092'
@@ -151,12 +190,20 @@ services:
       KAFKA_LOG_RETENTION_BYTES: 1073741824  # 1 GB
       KAFKA_LOG_SEGMENT_BYTES: 524288000  # 500 MB
       KAFKA_LOG_CLEANUP_POLICY_DELETE_RETENTION_MS: 3600000  # 1 hour
+
+      # Fault tolerance & High availability
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_MIN_INSYNC_REPLICAS: 2
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+
+    # The healthcheck will try and list all topics available. This will actively check the connection between it and all the other nodes.
     healthcheck:
       test: ["CMD", "./opt/kafka/bin/kafka-topics.sh", "--bootstrap-server", "localhost:19092", "--list"]
       interval: 60s
       retries: 3
       start_period: 40s
       timeout: 30s
+
     restart: on-failure:3
     depends_on:
       - controller-1
@@ -171,7 +218,9 @@ services:
     ports:
       - 49092:9092
     environment:
-      KAFKA_NODE_ID: 6
+
+      # Base configurations
+      KAFKA_NODE_ID: 7
       KAFKA_PROCESS_ROLES: broker
       KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
       KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-3:19092,PLAINTEXT_HOST://{IP_ADDR}:49092'
@@ -191,12 +240,20 @@ services:
       KAFKA_LOG_RETENTION_BYTES: 1073741824  # 1 GB
       KAFKA_LOG_SEGMENT_BYTES: 524288000  # 500 MB
       KAFKA_LOG_CLEANUP_POLICY_DELETE_RETENTION_MS: 3600000  # 1 hour
+
+      # Fault tolerance & High availability
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_MIN_INSYNC_REPLICAS: 2
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+
+    # The healthcheck will try and list all topics available. This will actively check the connection between it and all the other nodes.
     healthcheck:
       test: ["CMD", "./opt/kafka/bin/kafka-topics.sh", "--bootstrap-server", "localhost:19092", "--list"]
       interval: 60s
       retries: 3
       start_period: 40s
       timeout: 30s
+
     restart: on-failure:3
     depends_on:
       - controller-1
@@ -204,3 +261,53 @@ services:
       - controller-3
     volumes:
       - broker-3-volume:/var/lib/kafka/data
+
+  broker-4:
+    image: apache/kafka:latest
+    container_name: broker-3
+    ports:
+      - 49092:9092
+    environment:
+
+      # Base configurations
+      KAFKA_NODE_ID: 8
+      KAFKA_PROCESS_ROLES: broker
+      KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-3:19092,PLAINTEXT_HOST://{IP_ADDR}:49092'
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
+
+      # Mount location
+      KAFKA_LOG_DIRS: '/var/lib/kafka/data'
+
+      # Consumer policies
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+
+      # Retention policies
+      KAFKA_LOG_RETENTION_MS: 432000000  # 5 days in milliseconds
+      KAFKA_LOG_RETENTION_BYTES: 1073741824  # 1 GB
+      KAFKA_LOG_SEGMENT_BYTES: 524288000  # 500 MB
+      KAFKA_LOG_CLEANUP_POLICY_DELETE_RETENTION_MS: 3600000  # 1 hour
+
+      # Fault tolerance & High availability
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_MIN_INSYNC_REPLICAS: 2
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+
+    # The healthcheck will try and list all topics available. This will actively check the connection between it and all the other nodes.
+    healthcheck:
+      test: ["CMD", "./opt/kafka/bin/kafka-topics.sh", "--bootstrap-server", "localhost:19092", "--list"]
+      interval: 60s
+      retries: 3
+      start_period: 40s
+      timeout: 30s
+
+    restart: on-failure:3
+    depends_on:
+      - controller-1
+      - controller-2
+      - controller-3
+    volumes:
+      - broker-4-volume:/var/lib/kafka/data
